Switched over to use jetty to run on heroku

--- a/pom.xml
+++ b/pom.xml
@@ -159,10 +159,10 @@
             <configuration>
               <artifactItems>
                 <artifactItem>
-                  <groupId>com.github.jsimone</groupId>
-                  <artifactId>webapp-runner</artifactId>
-                  <version>7.0.57.2</version>
-                  <destFileName>webapp-runner.jar</destFileName>
+                  <groupId>org.mortbay.jetty</groupId>
+                  <artifactId>jetty-runner</artifactId>
+                  <version>7.5.4.v20111024</version>
+                  <destFileName>jetty-runner.jar</destFileName>
                 </artifactItem>
               </artifactItems>
             </configuration>
