--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
   <url>http://maven.apache.org</url>
 
   <properties>
-    <jetty.runner.version>9.3.0.RC1</jetty.runner.version>
+    <jetty.runner.version>8.1.16.v20140903</jetty.runner.version>
   </properties>
 
   <dependencies>
@@ -27,13 +27,13 @@
     <dependency>
       <groupId>org.apache.tomcat</groupId>
       <artifactId>tomcat-catalina</artifactId>
-      <version>8.0.21</version>
+      <version>8.0.24</version>
     </dependency>
 
     <!-- This keeps the jetty runner out of the build but
          allows us to use the versions plugin -->
     <dependency>
-      <groupId>org.eclipse.jetty</groupId>
+      <groupId>org.mortbay.jetty</groupId>
       <artifactId>jetty-runner</artifactId>
       <version>${jetty.runner.version}</version>
       <scope>test</scope>
@@ -48,7 +48,7 @@
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
-      <version>2.0.23-beta</version>
+      <version>2.0.28-beta</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -174,7 +174,7 @@
             <configuration>
               <artifactItems>
                 <artifactItem>
-                  <groupId>org.eclipse.jetty</groupId>
+                  <groupId>org.mortbay.jetty</groupId>
                   <artifactId>jetty-runner</artifactId>
                   <version>${jetty.runner.version}</version>
                   <destFileName>jetty-runner.jar</destFileName>
