--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
     <dependency>
       <groupId>com.brotherlogic</groupId>
       <artifactId>discogs</artifactId>
-      <version>0.2</version>
+      <version>0.3</version>
     </dependency>
     <dependency>
       <groupId>org.scribe</groupId>
@@ -30,6 +30,13 @@
       <version>8.0.24</version>
     </dependency>
 
+    <!-- Postgres driver -->
+    <dependency>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>9.4-1200-jdbc41</version>
+    </dependency>
+    
     <!-- This keeps the jetty runner out of the build but
          allows us to use the versions plugin -->
     <dependency>
@@ -103,6 +110,42 @@
         </executions>
       </plugin>
 
+      <!-- For regular testing -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.18.1</version>
+        <configuration>
+          <forkMode>always</forkMode>
+          <environmentVariables>
+            <DATABASE_URL>${DATABASE_URL}</DATABASE_URL>
+            <discogskey>TestKey</discogskey>
+            <discogssecret>TestSecret</discogssecret>
+          </environmentVariables>
+        </configuration>
+      </plugin>
+      
+      <!-- For integration testing -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-failsafe-plugin</artifactId>
+        <version>2.13</version>
+        <executions>
+          <execution>
+            <id>integration-test</id>
+            <goals>
+              <goal>integration-test</goal>
+            </goals>
+          </execution>
+          <execution>
+            <id>verify</id>
+            <goals>
+              <goal>verify</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      
       <plugin>
 	<groupId>org.jacoco</groupId>
 	<artifactId>jacoco-maven-plugin</artifactId>
