--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
@@ -16,6 +17,10 @@
     <maven.compiler.target>1.7</maven.compiler.target>
   </properties>
 
+  <name>${project.groupId}:${project.artifactId}</name>
+  <description>Record Collection library</description>
+    <url>https://github.com/BrotherLogic/recordcollection</url>
+  
   <licenses>
     <license>
       <name>The Apache License, Version 2.0</name>
