--- a/.github/workflows/basicrun.yml
+++ b/.github/workflows/basicrun.yml
@@ -20,6 +20,9 @@ jobs:
       uses: actions/setup-go@v2
       with:
         go-version: '1.19.2'
+   
+    - name: Check for logs
+      run: ./look_for_logs.sh
 
     - name: Run build
       run: go build github.com/${GITHUB_REPOSITORY}
