--- a/.github/workflows/makepr.yml
+++ b/.github/workflows/makepr.yml
@@ -11,4 +11,4 @@ jobs:
       uses: repo-sync/pull-request@v2
       with:
         destination_branch: "master"
-        github_token: ${{ secrets.GITHUB_TOKEN }}
+        github_token: ${{ secrets.PERSONAL_TOKEN }}
