--- a/.github/workflows/basicrun.yml
+++ b/.github/workflows/basicrun.yml
@@ -35,3 +35,6 @@ jobs:
       with:
         path-to-profile: profile.cov
         ignore: recordcollection.go
+
+    - name: Upload coverage reports to Codecov
+      uses: codecov/codecov-action@v3
