--- a/.github/workflows/basicrun.yml
+++ b/.github/workflows/basicrun.yml
@@ -34,6 +34,9 @@ jobs:
       with:
         path-to-profile: profile.cov
         ignore: recordcollection.go
+    
+    - name: Run coverage
+      run: go test -race -coverprofile=coverage.out -covermode=atomic
 
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v3
